undo delete package-lock.json, update fontawesome to 5.13.0, refactor in-breadcrumb.js and fix dropdown paragraph break the dropdown wrapper

--- a/src/assets/scss/blockit/header/blockit-header.scss
+++ b/src/assets/scss/blockit/header/blockit-header.scss
@@ -9,7 +9,3 @@ $header-border-width:                         $base-border-width !default;
 $header-border-width-2:                       $base-border-width-2 !default;
 $header-border-radius:                        $base-border-radius !default;
 $header-border-radius-2:                      $base-border-radius-2 !default;
-
-.example-header-style {
-    font-size: inherit;
-}
